--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="info">
       <p>
-        Spuds For Duds recognizes the need to provide needy potatoes with the
+        Duds For Spuds recognizes the need to provide needy potatoes with the
         proper clothing that they deserve but are often denied.
       </p>
       <div class="spudpics">
